⚖️ change svc type to LoadBalancer

--- a/manifests/templates/service.yml
+++ b/manifests/templates/service.yml
@@ -6,7 +6,6 @@ spec:
   selector:
     app: harness-pipelines
   ports:
-    - protocol: TCP
-      port: 80
+    - port: 80
       targetPort: 8080
-  type: NodePort
+  type: LoadBalancer
